--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x250/MtSnow/300x250_MtSnow.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x250/MtSnow/300x250_MtSnow.htm
@@ -9,16 +9,16 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .SabonLTProBold {
-        font-family: linotype-sabon,sans-serif;
-        font-weight: 700;
+      .owners-narrow {
+        font-family: "owners-narrow";
+        font-weight: 400;
         font-style: normal;
       }
-      @font-face {
-          font-family: CocoGothicBold;
-          src: url('fonts/Zetafonts - Coco Gothic Bold.woff') format("woff");
+      .poppins {
+        font-family: "poppins";
+        font-weight: 600;
+        font-style: normal;
       }
-      .CocoGothicBold { font-family: CocoGothicBold; }
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
@@ -27,8 +27,8 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #323232;
-        background-color: #fff;
+        color: #FAFFFF;
+        background-color: #006CAB;
       }
       .frame {
         position: absolute;
@@ -46,44 +46,47 @@
       <div id="backgroundImage1" style="top: 37px;width: 300px; height: auto;" class="asset-top frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="top: 37px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="top: 37px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-213px;background-color:rgba(255, 255, 255, 1.0);"></div>
-      <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:rgba(255, 255, 255, 1.0);"></div>
+      <div id="topWhitePatch" class="frame" style="top:-213px;background-color:#006CAB;"></div>
+      <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:#006CAB;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left CocoGothicBold"
+      <div id="frameText1" class="text-left owners-narrow"
         data-text="frameText1"
+        data-style="text-align:left;"
         style="top: 171px;
           left: 11px;
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0px;
+          letter-spacing: 0.17px;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text-left CocoGothicBold"
+      <div id="frameText2" class="text-left owners-narrow"
         data-text="frameText2"
+        data-style="text-align:left;"
         style="top: 171px;
           left: 11px;
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0px;
+          letter-spacing: 0.17px;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text-left CocoGothicBold"
+      <div id="frameText3" class="text-left owners-narrow"
         data-text="frameText3"
+        data-style="text-align:left;"
         style="top: 171px;
           left: 11px;
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0px;
+          letter-spacing: 0.17px;
           line-height: 1.15;">
       </div>
-      <div id="cta" class="text CocoGothicBold"
+      <div id="cta" class="text poppins"
         data-text="ctaText"
-        data-style="padding:0 10px 0px;"
+        data-style="padding:2px 10px 0px;"
         style="top: 194px;
           left: 201px;
           width: 87px;
@@ -91,13 +94,13 @@
           font-size: 12px;
           line-height: 20px;
           border-radius: 15px;
-          color: #fff;">
+          color: #FAFFFF;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="SabonLTProBold">SabonLTProBold</div>
-      <div class="CocoGothicBold">CocoGothicBold</div>
+      <div class="owners-narrow">owners-narrow</div>
+      <div class="poppins">poppins</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
@@ -134,7 +137,7 @@
             // ref: 'ref.png'
             logoImage: './../images/300x250_MtSnow_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#E31837^#000000',
+            ctaBtnColor: '#04A9DB^#00468C',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -166,7 +169,7 @@
                   frameText[i].style.left = '15px';
                   frameText[i].style.width = '270px';
                   frameText[i].style.height = '38px';
-                  frameText[i].style.textAlign = 'center';
+                  frameText[i].style.textAlign = 'left';
                 }
               } else if(layout == 'multipleimagesoffer') {
                 content.styleProperties = "{'#cta': {x:0,y:21},'#productLableLogo': {css:{display:'block'}}}";
@@ -175,13 +178,13 @@
                 cta.style.width = "auto";
                 cta.style.minWidth = "90px";
                 cta.style.maxWidth = "140px";
-                cta.dataset.style = 'padding:0px 10px 0px;';
+                cta.dataset.style = 'padding:2px 10px 0px;';
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
                   frameText[i].style.left = '15px';
                   frameText[i].style.width = '270px';
                   frameText[i].style.height = '38px';
-                  frameText[i].style.textAlign = 'center';
+                  frameText[i].style.textAlign = 'left';
                 }
               }
               // else if(layout == 'multipleimages' && !document.querySelector("#backgroundImage4")) {
