--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/SevenSprings/320x50_SevenSprings.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/SevenSprings/320x50_SevenSprings.htm
@@ -9,13 +9,13 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .RobotoSlabBold{
-        font-family: roboto-slab,serif;
+      .hoss-sharp-black {
+        font-family: "hoss-sharp";
         font-weight: 700;
         font-style: normal;
       }
-      .MontserratExtraBold {
-        font-family: montserrat, sans-serif;
+      .hoss-sharp-heavy {
+        font-family: "hoss-sharp";
         font-weight: 800;
         font-style: normal;
       }
@@ -27,8 +27,8 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #113451;
-        background-color: #fff;
+        color: #F6FFF7;
+        background-color: #008D55;
       }
       .frame {
         position: absolute;
@@ -46,12 +46,12 @@
       <div id="backgroundImage1" style="left: 54px;height: 50px;width: auto;" class="asset-left frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="left: 54px;height: 50px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="left: 54px;height: 50px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="left:-266px;background-color:rgba(255, 255, 255, 1.0);"></div>
-      <div id="bottomWhitePatch" class="frame" style="left:160px;background-color:rgba(255, 255, 255, 1.0);"></div>
+      <div id="topWhitePatch" class="frame" style="left:-266px;background-color:#008D55;"></div>
+      <div id="bottomWhitePatch" class="frame" style="left:160px;background-color:#008D55;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left MontserratExtraBold"
+      <div id="frameText1" class="text-left hoss-sharp-black"
         data-text="frameText1"
         style="top: 3px;
           left: 170px;
@@ -61,7 +61,7 @@
           letter-spacing: 0.02em;
           line-height: 1.1;">
       </div>
-      <div id="frameText2" class="text-left MontserratExtraBold"
+      <div id="frameText2" class="text-left hoss-sharp-black"
         data-text="frameText2"
         style="top: 3px;
           left: 170px;
@@ -71,7 +71,7 @@
           letter-spacing: 0.02em;
           line-height: 1.1;">
       </div>
-      <div id="frameText3" class="text-left MontserratExtraBold"
+      <div id="frameText3" class="text-left hoss-sharp-black"
         data-text="frameText3"
         style="top: 3px;
           left: 170px;
@@ -81,7 +81,7 @@
           letter-spacing: 0.02em;
           line-height: 1.1;">
       </div>
-      <div id="cta" class="text MontserratExtraBold"
+      <div id="cta" class="text hoss-sharp-heavy"
         data-text="ctaText"
         data-style="padding:0 6px 0px;"
         style="top: 17px;
@@ -97,7 +97,8 @@
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratExtraBold">MontserratExtraBold</div>
+      <div class="hoss-sharp-black">hoss-sharp-black</div>
+      <div class="hoss-sharp-heavy">hoss-sharp-heavy</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
@@ -134,7 +135,7 @@
             // ref: 'ref.png'
             logoImage: './../images/320x50_SevenSprings_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#F99A00^#faba52',
+            ctaBtnColor: '#F6FFF7^#89EBAD',
           },
           beforeLoad: function(data){
             data.map(function(content){
