--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/SevenSprings/160x600_SevenSprings.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/SevenSprings/160x600_SevenSprings.htm
@@ -40,7 +40,7 @@
       #cta { background-color: !{ctaBtn}; }
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
       #logoImage img {
-        top: 51.5%;
+        top: 50%;
       }
     </style>
   </head>
@@ -49,7 +49,7 @@
       <div id="backgroundImage1" style="top: 65px;width: 160px;height: auto;" class="asset-top frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="top: 65px;width: 160px;height: auto;" class="asset-top frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="top: 65px;width: 160px;height: auto;" class="asset-top frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-535px;background-color:#008D55;"></div>
+      <div id="topWhitePatch" class="frame" style="top:-556px;background-color:#008D55;"></div>
       <div id="bottomWhitePatch" class="frame" style="top:453px;background-color:#008D55;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
@@ -97,7 +97,7 @@
           font-size: 12px;
           line-height: 20px;
           letter-spacing: 0.05em;
-          /*border-radius: 15px;*/
+          border-radius: 7px;
           color: #141418;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -211,7 +211,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#89EBAD"//"#F8951F";
+            ctx.fillStyle = "#FFFFFF"//"#F8951F";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
