--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x250/MtSnow/300x250_MtSnow.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x250/MtSnow/300x250_MtSnow.htm
@@ -46,7 +46,7 @@
       <div id="backgroundImage1" style="top: 37px;width: 300px; height: auto;" class="asset-top frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="top: 37px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="top: 37px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-213px;background-color:#006CAB;"></div>
+      <div id="topWhitePatch" class="frame" style="top:-213px;background-color:#04A9DB;"></div>
       <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:#006CAB;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
@@ -59,7 +59,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0.17px;
+          letter-spacing: 1.7px;
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text-left owners-narrow"
@@ -70,7 +70,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0.17px;
+          letter-spacing: 1.7px;
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text-left owners-narrow"
@@ -81,7 +81,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0.17px;
+          letter-spacing: 1.7px;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text poppins"
@@ -213,7 +213,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#04A9DB";
+            ctx.fillStyle = "#FFFFFF";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
