--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/MtSnow/300x600_MtSnow.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/MtSnow/300x600_MtSnow.htm
@@ -46,12 +46,12 @@
       <div id="backgroundImage1" style="top: 65px;width: 300px; height: auto;" class="asset-top frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="top: 65px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="top: 65px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-534px;background-color:#006CAB;"></div>
+      <div id="topWhitePatch" class="frame" style="top:-534px;background-color:#04A9DB;"></div>
       <div id="bottomWhitePatch" class="frame" style="top:453px;background-color:#006CAB;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text owners-narrow"
+      <div id="frameText1" class="text-left owners-narrow"
         data-text="frameText1"
         data-style="text-align:left;"
         style="top: 464px;
@@ -59,10 +59,10 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 0.25px;
+          letter-spacing: 1.25px;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text owners-narrow"
+      <div id="frameText2" class="text-left owners-narrow"
         data-text="frameText2"
         data-style="text-align:left;"
         style="top: 464px;
@@ -70,10 +70,10 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 0.25px;
+          letter-spacing: 1.25px;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text owners-narrow"
+      <div id="frameText3" class="text-left owners-narrow"
         data-text="frameText3"
         data-style="text-align:left;"
         style="top: 464px;
@@ -81,7 +81,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 0.25px;
+          letter-spacing: 1.25px;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text poppins"
@@ -203,7 +203,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#04A9DB";
+            ctx.fillStyle = "#FFFFFF";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
