--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/MtSnow/728x90_MtSnow.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/MtSnow/728x90_MtSnow.htm
@@ -46,7 +46,7 @@
       <div id="backgroundImage1" style="left: 113px;height: 90px;width: auto;" class="asset-left frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="left: 113px;height: 90px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="left: 113px;height: 90px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="left:-615px;background-color:#006CAB;"></div>
+      <div id="topWhitePatch" class="frame" style="left:-615px;background-color:#04A9DB;"></div>
       <div id="bottomWhitePatch" class="frame" style="left:424px;background-color:#006CAB;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
@@ -58,7 +58,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 0.21px;
+          letter-spacing: 1.21px;
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left owners-narrow"
@@ -68,7 +68,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 0.21px;
+          letter-spacing: 1.21px;
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left owners-narrow"
@@ -78,7 +78,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 0.21px;
+          letter-spacing: 1.21px;
           line-height: 1.1;">
       </div>
       <div id="cta" class="text poppins"
@@ -214,7 +214,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#04A9DB";
+            ctx.fillStyle = "#FFFFFF";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
